fixSonar cube fix java:S2184,java:S100,java:S6204,java:S2142,java:S1117,java:S1170